fixed some mobile spacing

--- a/src/components/main-content.css
+++ b/src/components/main-content.css
@@ -154,3 +154,14 @@
   font-size: 1.6em;
   font-weight: 700;
 }
+
+@media only screen and (max-width: 600px) {
+  .stats-content {
+    grid-template-areas:
+      ".      .     bar1     .        ."
+      "   bar2 bar2  pipboy bar3  bar3   "
+      "bar4   .     pipboy   .   bar5"
+      "   bar6 bar6 pipboy  bar7  bar7   "
+      ".     . bar8          .     .";
+  }
+}
