--- a/src/components/work.css
+++ b/src/components/work.css
@@ -72,7 +72,8 @@
 }
 
 .work-preview-image-container {
-  height: 60%;
+  max-height: 60%;
+  min-width: 90%;
 }
 
 .work-detail {
@@ -127,10 +128,15 @@
 
 @media only screen and (max-width: 600px) {
   .work-list {
+    max-width: 97%;
     padding-top: 120px;
     height: 4vh;
-
+    border: 2px solid green;
     width: 100%;
+    overflow-x: hidden;
+    padding-left: 3px;
+    padding-right: 3px;
+    border-radius: 5px;
   }
   .work-container {
     -webkit-box-orient: vertical;
@@ -139,8 +145,9 @@
     flex-direction: column;
   }
   .work-preview-image {
-    height: 40%;
-    width: auto;
+    height: auto;
+    max-height: 100%;
+    width: 90%;
   }
   .work-detail {
     height: 70%;
